-- What's new for ??????

New Searches

* fm - Freshmeat.net search from Brent Beardsley
* sf - Sourceforget.net search from Brent Beardsley 
* jdk - searches the Sun JDK
* guiasp - Find maps and addresses in some cities of Brazil; from Andrew Francis

Modified Searches

* acine - added /video switch
* amaz - now tags to dqsd associate account, and added switches for catalog areas and restaurants
* thw - updated the search (the form changed on the site) and added /category switch
* ups - now allows spaces in tracking number(s)
* setiq - new switches : connect and display
* conv - missing "/" in the usage section

Enhancements

* Dutch holidays to 2013 (in both Dutch and English language) from Johan Geertsma 
* Modified 'shortcut' detection to allow shortcuts starting with numbers
* Andrew Francis added basic character escaping to the date/time format string.  
  Allows use of literal characters like 'd' that would normally be interpreted 
  as date/time formats.

Bug Fixes

* URLs, filenames, etc. are now detected with leading whitespace


-- What's new for 3.0.0.20 (beta)

New Searches

* newsau - Search for news topics at news.com.au, from Steve Lin
* hv - Rex Swain's HTTP Viewer; See exactly what an HTTP request returns to your browser
* law - FindLaw Law Library from John W. Bairen, Jr.
* dicit - Italian dictionary + Italian-English dictionary from Tom Creek
* acine - Search allocine.com, THE french site about movies, stars, theaters schedules, critics, trailers, etc...

Modified Searches

* 

Enhancements

* Modified update check to display a message box if there
  was an error (e.g., no internet) and there was an explicit
  check.
* Italian holidays thru 2020 from Tom Creek

Bug Fixes

* updated the link to the FAQ in the about box.


-- What's new for 3.0.0.19 (beta)

New Searches

* rot13 - Glenn add a rot13 converter function
* gfaq - GameFAQs.com from Casper Kvan Clausen
* ulwhois - whois information from whois.userland.com

Modified Searches
